fixed text-align in description

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,6 +245,6 @@ a {
 @media (max-width: 576px) {
   .content {
     align-items: center;
-    align-content: center;
+    text-align: center;
   }
 }
